{
    "name": "InputSystem",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "048610c6-2e9f-478a-804d-f27ca731f1f6",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "6943800b-9977-4184-bf22-e648bcb27a8b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseInput",
                    "type": "PassThrough",
                    "id": "c0538d82-006c-475f-a7aa-0d3e3dd1aead",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "807ba435-ad35-4bbc-b4bd-1b7650d641f0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "10490b38-c4f7-4a4b-8d14-032be1cac778",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ff03b5e2-b45b-4aa4-8b3d-bde93bb2b2df",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4bc3866f-a98a-45bc-8633-ff9ecfe16f17",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "28ec077c-00ea-400a-8913-074b52332ed2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b12c3167-fd9b-4bff-ba8a-d313d9e6e0ff",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}